Onclick to EventListener
Removed Onclick from html generate button and introduced an event listener instead.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button onclick="copyOnClick(this.id)" id="pwTwo" class="copy"><i class="fa-sharp fa-solid fa-copy"></i></button>
             </div>
         </div>
-        <div id="generatebuttonbox"><button onclick="newPassword()" id="generateButton">Generate Passwords</button></div>
+        <div id="generatebuttonbox"><button id="generatebutton">Generate Passwords</button></div>
         <script src="index.js"></script>
     </body>
 </html>
